<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatWindow">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:title="@string/chat_window_title"
        android:titleTextColor="@color/white"
        android:layout_alignParentTop="true" />

    <ListView
        android:id="@+id/chat_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_yellow"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/send_button"
        android:layout_below="@+id/toolbar"
        />

    <EditText
        android:id="@+id/message_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/send_button"
        android:layout_marginStart="12dp"
        />
    <Button
        android:id="@+id/send_button"
        android:text="@string/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/black"
        android:layout_marginEnd="12dp"
        />
</RelativeLayout>