...
    <string name="main_activity_title">Main</string>
    <string name="alert_dialog_title">Are you sure you want to continue?</string>
    <string name="alert_dialog_description">You are going to finish the current activity and will be navigated back to the previous activity.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="start_chat_text">Start Chat</string>
    <string name="send_button">SEND</string>
    <string name="default_message">Test Message</string>
    <string name="sym_call_outgoing_description">Sym Call Outgoing Icon</string>
    <string name="sym_call_incoming_description">Sym Call Incoming Icon</string>
    <string name="chat_window_title">Chat Window</string>
    <string name="test_toolbar_text">Test Toolbar</string>
    <string name="weather_forecast">Weather Forecast</string>
...
